--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
   </head>
   <body>
     <div id="banner_part">
-      <div class="banner_overly ">
+      <div class="banner_overly">
         <div class="container">
-          <div class="btns col-lg-1 m-auto">
-            <div class="FIFA">FIFA</div>
+          <div class="row">
+            <div class="m-auto">
+              <div class="FIFA">FIFA</div>
+              <div class="FIFA">Cricket</div>
+            </div>
           </div>
         </div>
       </div>
