--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     <div id="banner_part">
       <div class="banner_overly">
         <div class="container">
-          <div class="row">
-            <div class="m-auto">
-              <div class="FIFA">FIFA</div>
-              <div class="FIFA">Cricket</div>
-            </div>
+          <div class="btn_margin">
+            <a href="#"><div class="Sports">Fifa</div></a>
+            <a href="#"><div class="Sports">Cricket</div></a>
           </div>
         </div>
       </div>
