--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
     <title>JquarrY</title>
   </head>
   <body>
-    <div id="banner_part">
-      <div class="banner_overly">
-        <div class="container">
-          <div class="btn_margin">
-            <a href="#"><div class="Sports">Fifa</div></a>
-            <a href="#"><div class="Sports">Cricket</div></a>
-          </div>
-        </div>
+    <div id="Banner">
+      <div class="container">
+        <button id="show">Show</button>
+        <button id="hide">hide</button>
+        <button id="Showhide">Showhide</button>
+        <button id="FadeIn">Flid in</button>
+        <button id="FadeOut">Flid out</button>
+        <button id="FadeInOut">FlidInOut</button>
+        <button id="SlideUp">SlidUp</button>
+        <button id="SlideDown">SlidDown</button>
+        <button id="SlideUpDown">SlidUpDwon</button>
+        <div class="Box"></div>
       </div>
+      
     </div>
+    
 
     <!-- All JS Starts -->
     <script src="js/jquery.min.js"></script>
