--- a/index.html
+++ b/index.html
@@ -7,29 +7,20 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- All Links Ends -->
-    <title>JquarrY</title>
+    <title>JQuarrY</title>
   </head>
   <body>
     <div id="Banner">
       <div class="container">
-        <button id="show">Show</button>
-        <button id="hide">hide</button>
-        <button id="Showhide">Showhide</button>
-        <button id="FadeIn">Flid in</button>
-        <button id="FadeOut">Flid out</button>
-        <button id="FadeInOut">FlidInOut</button>
-        <button id="SlideUp">SlidUp</button>
-        <button id="SlideDown">SlidDown</button>
-        <button id="SlideUpDown">SlidUpDwon</button>
-        <div class="Box"></div>
+        <button id="show">Appear</button>
       </div>
       
     </div>
     
 
     <!-- All JS Starts -->
-    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/script.js"></script>
     <!-- All JS Starts -->
   </body>
