Added Banner Part

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>JQuarrY</title>
   </head>
   <body>
-    <div id="Banner">
+    <div id="banner">
       <div class="container">
         <button id="show">Appear</button>
       </div>
