--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div id="banner">
       <div class="container">
         <button id="show">Appear</button>
+        <button id="hide">Disappear</button>
+        <button id="show/hide">Appear/Disappear</button>
       </div>
       
     </div>
