--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button type="button" class="btn btn-primary" id="show">Appear</button>
         <button type="button" class="btn btn-primary" id="hide">Disappear</button>
         <button type="button" class="btn btn-primary" id="show/hide">Appear/Disappear</button>
+        <div class="box"></div>
       </div>
 
       
