--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- All JS Starts -->
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.min.js"></script>
+    <script src="js//jquery-1.12.4.min.js"></script>
     <script src="js/script.js"></script>
     <!-- All JS Starts -->
   </body>
