Added Fade In/Out

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <button type="button" class="btn btn-primary" id="show">Appear</button>
         <button type="button" class="btn btn-primary" id="hide">Disappear</button>
         <button type="button" class="btn btn-primary" id="showhide">Appear/Disappear</button>
+        <button type="button" class="btn btn-primary" id="fadeIn">Fade In</button>
+        <button type="button" class="btn btn-primary" id="fadeOut">Fade Out</button>
+        <button type="buttonfadeIn" class="btn btn-primary" id="InOut">Appear/Disappear</button>
         <div class="box"></div>
       </div>
 
